--- a/SpringBootBoard/src/main/resources/application.properties
+++ b/SpringBootBoard/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=SpringBootBoard
 
 #1. 포트번호 수정 --> 톰캣 서버가 내장 되어있음!
-server.port=8086
+server.port=80
 
 # .properties 라는 확장자와 .yaml 
 # k=v					  k:v 들여쓰기
@@ -30,7 +30,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 # JPA 사용 하다 보면 spl문이 눈에 보이지 않아 정상적으로 동작 되는지가 의문 
 # console창에 sql문 출력
-spring.jpa.properties.hibernate.format_sql = true
+spring.jpa.properties.hibernate.format_sql = update
 # console창에 출력된 sql문을 정렬
 
 # 파일 업로드 설정
