--- a/SpringBootBoard/src/main/resources/application.properties
+++ b/SpringBootBoard/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.datasource.password=navercloudtest
 # JPA 환경설정
 # DDL 코드를 어떻게 할건지
 # 어떤 database 를 연결 할지
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 # create, update, none
 # entity코드 수정 시에만 update 될 수 있게
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
@@ -30,7 +30,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 # JPA 사용 하다 보면 spl문이 눈에 보이지 않아 정상적으로 동작 되는지가 의문 
 # console창에 sql문 출력
-spring.jpa.properties.hibernate.format_sql = update
+spring.jpa.properties.hibernate.format_sql = true
 # console창에 출력된 sql문을 정렬
 
 # 파일 업로드 설정
