--- a/SpringBootBoard/src/main/resources/application.properties
+++ b/SpringBootBoard/src/main/resources/application.properties
@@ -42,6 +42,11 @@ spring.servlet.multipart.max-request-size =20MB
 file.upload-dir = /home/git/upload
 # 이미지 업로드 시 저장될 저장 폴더
 
+ncp.access-key=ncp_iam_BPASKRuMQaHvnPFWz150
+ncp.secret-key=ncp_iam_BPKSKR11v5BjooU3u1OI9OFnxPr8ioBgif
+ncp.region=kr-standard
+ncp.end-point=https://kr.object.ncloudstorage.com
+ncp.bucket-name=springboot5
 
 
 
